--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,17 @@
   <div class="container">
     <h1 class="text-center">Todo App!</h1>
   
-    <button class="btn btn-default btn-lg newTodo">New Todo</button>
+    <form ng-submit='createTodo()'>
+      <div class="form-group">
+        <label for="newTodoDesc">Description</label>
+        <input type="text" class="form-control" placeholder="Buy Eggs." ng-model='newTodo.desc' required>
+      </div>
+      <div class="form-group">
+        <label for="newTodoDueDate">Due Date</label>
+        <input type="date" class="form-control" ng-model='newTodo.dueDate' required>
+      </div>
+      <button type="submit" class="btn btn-primary">Create Todo</button>
+    </form>
     
     <table class="table">
       <thead>
@@ -33,19 +43,24 @@
       </thead>
       <tbody class='todoList'>
 
-        <tr class='template'>
-          <td class='createdAt'>x</td>
-          <td class='dueDate'>x</td>
-          <td class='desc'>x</td>
+        <tr ng-repeat='todo in todos'>
+          <td class='createdAt'>{{todo.createdAt | date}}</td>
+          <td class='dueDate'>{{todo.dueDate | date}}</td>
+          <td class='desc'>{{todo.desc}}</td>
           <td>
-            <input class='isComplete' type="checkbox">
+            <input class='isComplete'
+                   type="checkbox"
+                   ng-checked='todo.isComplete'
+                   ng-click='toggleComplete(todo)'>
           </td>
           <td>
-            <button type="button" class="btn btn-default btn-sm delete">
+            <button type="button" class="btn btn-default btn-sm delete" ng-click='removeTodo(todo)'>
               <span class="glyphicon glyphicon-remove"></span>
             </button>
           </td>
         </tr>
+
+
       </tbody>
     </table>
   </div>
